<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AllergyAlert</string>
    <string name="action_settings">Einstellungen</string>
    <string name="activity_launcher_loading">Lade...</string>
    <string name="title_activity_register">Registrieren</string>
    <string name="title_activity_launcher">AllergyAlert</string>
    <string name="login_register">Registrieren</string>
    <string name="promt_username">Benutzername</string>
    <string name="username">Benutzername</string>
    <string name="password">Passwort</string>
    <string name="firstname">Vorname</string>
    <string name="email">Email</string>
    <string name="lastname">Nachname</string>
    <string name="allergies">Allergien</string>
    <string name="street">Straße</string>
    <string name="city">Stadt</string>
    <string name="name">Name</string>
    <string name="register_hint_username">Benutzername eingeben</string>
    <string name="register_hint_password">Passwort</string>
    <string name="register_hint_password_repeat">Passwort wiederholen</string>
    <string name="register_hint_email">Email</string>
    <string name="register_hint_firstname">Vorname</string>
    <string name="register_hint_lastname">Nachname</string>
    <string name="register_hint_name">Name eingeben</string>
    <string name="address">Adresse</string>
    <string name="register_hint_city">Stadt</string>
    <string name="register_hint_street">Straße</string>
    <string name="register_button">Registrieren</string>
    <string name="allergy_add">Allergie hinzufügen</string>
    <string name="allergy_button_add">Weitere Allergie hinzufügen</string>
    <string name="allergy_button_finish">Abschließen</string>
    <string name="allergy">Allergie</string>
    <string name="title_activity_allergy">Allergie hinzufügen</string>
    <string name="action_logout">Abmelden</string>

</resources>
